@@ -5,3 +5,5 @@ void* explicit_memset(void* dest, int c, size_t len) {
   asm volatile("": : "r"(dest) : "memory");
   return dest;
 }
+
+void* memset_explicit(void* dest, int c, size_t n) __attribute__((alias("explicit_memset")));
